# Lissa

./: .gitignore  DEPLOY.md  LAUNCH.md  MOBILE.md  README.md  analytics.py  app.py  capacitor.config.json  lissa.py  lissa_memory.json  memory_store.py  package-lock.json  package.json  pyproject.toml  recall.py  render.yaml  requirements.txt  run.sh  run_web.sh  setup_mobile.sh  togif.sh
.github/workflows/: keepwarm.yml  tests.yml
static/: index.html  manifest.json  privacy.html  sw.js
tests/: __init__.py  test_analytics.py  test_app.py  test_memory_store.py  test_recall.py  ui_test.js
