[project]
name = "lissa"
version = "1.0.0"
description = "A charming, warm companion chatbot for social conversation, powered by the Google Gemini API free tier."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Anzu Shiddy" }]
requires-python = ">=3.12"
dependencies = [
    "google-genai>=2.11.0,<3.0",
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "edge-tts>=6.1,<8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
# The single-file frontend and the JS E2E suite aren't Python.
extend-exclude = ["static", "tests/ui_test.js"]

[tool.ruff.lint]
# A pragmatic default set: pyflakes (F), pycodestyle (E/W), isort (I),
# flake8-bugbear (B), pyupgrade (UP). Kept lean so it flags real issues
# without fighting the existing hand-tuned style.
select = ["E", "F", "W", "I", "B", "UP"]
# E501 (line length) is advisory here — the prose-heavy prompt strings run
# long on purpose and reflowing them would hurt readability.
ignore = ["E501"]
